# api_exchange_core

./: .flake8  .flake8-custom-rules  .gitignore  CONTRIBUTING.md  DEVELOPER_GUIDE.md  LICENSE  README.md  TECHNICAL.md  env  fix_test_imports.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_logging_demo.py  test_tw_schema.py
.github/workflows/: dco.yml
alembic/: env.py
alembic/versions/: 1382c3ca4535_enable_pgcrypto_extension.py  19b46e207c8b_removed_tracking_tables.py  1be9ee71a8b5_add_external_access_tokens_table_for_.py  21ca63bac998_add_timezone_to_datetime_columns.py  2326b6953c92_initial_migration_with_all_current_.py  510f441342d0_initial_migration_with_all_models.py  5dd109a62f3f_initial_release.py  73f52a1a020a_drop_correlation_id.py  85a558efd924_merge_correlation_id_removal.py  8a802f3e7652_add_pipeline_id_and_pipeline_json_to_.py  8c1bec1b2b99_add_pipeline_name_to_entity_and_.py  992e047073d8_fix_encrypted_access_token_column_type_.py  9e509f2a1cb7_enable_pgcrypto_extension.py  a245474fccb0_remove_pipeline_tracking_columns.py  a8be8f6d567b_add_statetransitiontable.py  ae7148451a61_add_pipeline_execution_tracking_tables.py  baed0a96477b_add_is_root_to_pipeline_step_definition.py  d691b5b3a51c_enable_pgcrypto_extension.py  d79507e73e39_add_processing_results_to_entity.py  e6ce74b1dbd9_change_sequence_number_to_bigint.py  e85a43828f74_add_pipeline_id_to_pipeline_state_.py  remove_correlation_id_from_pipeline_state_history.py
api_exchange_core/: config.py  constants.py  custom_flake8_rules.py  enums.py  exceptions.py  type_definitions.py
api_exchange_core/context/: __init__.py  operation_context.py  service_decorators.py  tenant_context.py
api_exchange_core/db/: __init__.py  db_api_token_models.py  db_base.py  db_config.py  db_credential_models.py  db_entity_models.py  db_error_models.py  db_pipeline_definition_models.py  db_pipeline_state_models.py  db_pipeline_tracking_models.py  db_state_transition_models.py  db_tenant_models.py
api_exchange_core/processing/: __init__.py  duplicate_detection.py  entity_attributes.py  processing_service.py  processor_config.py
api_exchange_core/processors/: __init__.py  mapper_interface.py  message.py  processing_result.py  simple_processor_handler.py  simple_processor_interface.py
api_exchange_core/repositories/: __init__.py  api_token_repository.py  base_repository.py  credential_repository.py
api_exchange_core/schemas/: __init__.py  credential_schema.py  credential_schemas.py  entity_schema.py  error_message_schema.py  mixins.py  pipeline_state_schema.py  processing_error_schema.py  state_transition_schema.py  tenant_schema.py  tenant_schemas.py
api_exchange_core/services/: __init__.py  api_token_service.py  base_service.py  credential_service.py  entity_service.py  logging_processing_error_service.py  logging_state_tracking_service.py  pipeline_state_service.py  processing_error_service.py  state_projection_service.py  state_tracking_service.py  tenant_service.py
api_exchange_core/utils/: __init__.py  api_token_utils.py  azure_queue_utils.py  credential_utils.py  crud_helpers.py  encryption_utils.py  hash_config.py  hash_utils.py  json_utils.py  logger.py  message_tracking_utils.py  metrics_utils.py  pipeline_discovery_v2.py  pipeline_utils.py  queue_utils.py  schema_factory.py  tenant_utils.py
docs/: Makefile  README.md  TODO.md  logging_standards.md  output_handlers_guide.md  processor_framework.md  tasks.md  test_harness_roadmap.md
docs/source/: architecture.rst  conf.py  configuration.rst  getting-started.rst  index.rst  overview.rst
e2e/: .env.example  README.md  __init__.py  docker-compose.yml  function_app.py  host.json  local.settings.json.example  requirements.txt  run_e2e_tests.py  run_harness.py  setup_e2e.sh  setup_test_db.py  test_e2e_harness.py  test_simple.py
e2e/config/: __init__.py
e2e/hello_world/: function_app.py  host.json  local.settings.json  local.settings.json.example
e2e/processors/: __init__.py  validation_processor.py  verification_processor.py
e2e/scenarios/: __init__.py  entity_creation.py
e2e/utils/: __init__.py  results_collector.py  test_data_generators.py  (+1 more)
examples/: README.md  simple_adapter.py  simple_processor.py
src/: __init__.py  config.py  constants.py  exceptions.py
tests/: FIXTURES.md  README_TESTING.md  conftest.py  test_v2_framework.py
(+200 files in other folders)
